name: francium
version: 0.1
build-type: Simple
cabal-version: >= 1.20
license: BSD3
license-file: LICENSE

library
  build-depends:
    base >= 4 && < 5,
    clay,
    ghcjs-base,
    ghcjs-dom,
    lens,
    mtl,
    profunctors,
    reactive-banana,
    text, transformers,
    virtual-dom
  default-language: Haskell2010
  exposed-modules:
    Francium
    Francium.Component
    Francium.Hooks
    Francium.HTML
    Francium.DOMEvent
    Francium.CSS
    Francium.Components.Form.Input
  hs-source-dirs: src

executable test
  build-depends:
                base >= 4 && < 5, francium, virtual-dom, ghcjs-base
  main-is: Test.hs
