name: francium
version: 0.1
build-type: Simple
cabal-version: >= 1.20
license: BSD3
license-file: LICENSE

library
  build-depends:
    base >= 4 && < 5,
    clay,
    frpnow,
    ghcjs-base,
    ghcjs-dom,
    lens,
    mtl,
    profunctors,
    stm,
    text,
    transformers,
    virtual-dom
  default-language: Haskell2010
  exposed-modules:
    Francium
    Francium.CSS
    Francium.Component
    Francium.Components.Form.Input
    Francium.HTML
    Francium.Hooks
    Francium.Routing
  hs-source-dirs: src
  js-sources: vendor/next-tick.js
  ghc-options: -Wall

executable test
  build-depends:
                base >= 4 && < 5, francium, virtual-dom, ghcjs-base, frpnow
  ghcjs-options: -threaded
  main-is: Test.hs
