name: todo-mvc
version: 0.1
build-type: Simple
cabal-version: >= 1.20

executable todo-mvc
  build-depends:
    base >= 4 && < 5,
    aeson, bytestring, francium, lens, reactive-banana, ghcjs-base, text, transformers, clay, mtl, template-haskell, virtual-dom
  default-language: Haskell2010
  main-is: Main.hs
  ghc-options: -Wall
