name: todo-mvc
version: 0.1
build-type: Simple
cabal-version: >= 1.20

executable todo-mvc
  build-depends:
    base >= 4 && < 5,
    aeson, bytestring, francium, lens, ghcjs-base, text, transformers, mtl, template-haskell, ghcjs-dom
  default-language: Haskell2010
  main-is: Main.hs
  ghc-options: -Wall
